# sar-rag-target

./: .gitignore  README.md  pyproject.toml
.claude/agents/: chunker.md  reranker.md  retriever.md
.claude/rules/: immutable-evaluation.md  pipeline-structure.md
.claude/skills/run/: SKILL.md
.claude/skills/search/: SKILL.md
corpus/: eval_set.json
corpus/docs/: api-endpoints.md  api-errors.md  auth-api-keys.md  auth-oauth.md  config-environments.md  config-secrets.md  data-caching.md  data-databases.md  deploy-containers.md  troubleshoot-performance.md
scripts/: convert_qasper.py
src/rag/: cache.py  chunker.py  config.py  corpus.py  embeddings.py  evaluator.py  indexer.py  paths.py  pipeline.py  reranker.py  retriever.py
tests/: test_cache.py  test_chunker.py  test_evaluator.py
